<resources>
    <string name="app_name">普通计算器</string>
    <string name="btn_cheng">×</string>
    <string name="btn_jia">+</string>
    <string name="btn_point">.</string>
    <string name="btn_chu">÷</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_deng">=</string>
    <string name="btn_clean">C</string>
    <string name="btn_ac">AC</string>
    <string name="btn_jian">-</string>
    <string name="txv_play" />
</resources>
