<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="andloo.myapp.MainActivity" >

    <andloo.myapp.FreeTextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/txv_play"
        android:textSize="50sp"
        android:onClick="onClick"
        android:gravity="end|bottom"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:text="@string/btn_clean"
                android:textSize="25sp"
                android:layout_height="80dp"
                android:id="@+id/btn_backspace"
                android:onClick="onClick"
                android:layout_width="80dp" />
            <Button
                android:text="@string/btn_7"
                android:textSize="25sp"
                android:layout_height="80dp"
                android:id="@+id/btn_7"
                android:onClick="onClick"
                android:layout_width="80dp" />
            <Button
                android:text="@string/btn_4"
                android:textSize="25sp"
                android:layout_height="80dp"
                android:id="@+id/btn_4"
                android:onClick="onClick"
                android:layout_width="80dp" />
            <Button
                android:text="@string/btn_1"
                android:textSize="25sp"
                android:layout_height="80dp"
                android:id="@+id/btn_1"
                android:onClick="onClick"
                android:layout_width="80dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <Button
                android:text="@string/btn_ac"
                android:textSize="25sp"
                android:layout_height="80dp"
                android:id="@+id/btn_ac"
                android:onClick="onClick"
                android:layout_width="80dp" />
            <Button
                android:text="@string/btn_8"
                android:textSize="25sp"
                android:layout_height="80dp"
                android:id="@+id/btn_8"
                android:onClick="onClick"
                android:layout_width="80dp" />
            <Button
                android:text="@string/btn_5"
                android:textSize="25sp"
                android:layout_height="80dp"
                android:id="@+id/btn_5"
                android:onClick="onClick"
                android:layout_width="80dp" />
            <Button
                android:text="@string/btn_2"
                android:textSize="25sp"
                android:layout_height="80dp"
                android:id="@+id/btn_2"
                android:onClick="onClick"
                android:layout_width="80dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:text="@string/btn_chu"
                android:textSize="25sp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:onClick="onClick"
                android:id="@+id/btn_chu" />

            <Button
                android:text="@string/btn_9"
                android:textSize="25sp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:onClick="onClick"
                android:id="@+id/btn_9" />

            <Button
                android:text="@string/btn_6"
                android:textSize="25sp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:onClick="onClick"
                android:id="@+id/btn_6" />

            <Button
                android:text="@string/btn_3"
                android:textSize="25sp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:onClick="onClick"
                android:id="@+id/btn_3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:text="@string/btn_cheng"
                android:textSize="25sp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:onClick="onClick"
                android:id="@+id/btn_cheng" />

            <Button
                android:text="@string/btn_jian"
                android:textSize="25sp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:onClick="onClick"
                android:id="@+id/btn_jian" />

            <Button
                android:text="@string/btn_jia"
                android:textSize="25sp"
                android:layout_width="80dp"
                android:id="@+id/btn_jia"
                android:onClick="onClick"
                android:layout_height="160dp" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="@string/btn_point"
            android:textSize="25sp"
            android:layout_height="80dp"
            android:id="@+id/btn_point"
            android:onClick="onClick"
            android:layout_width="80dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:text="@string/btn_0"
            android:textSize="25sp"
            android:layout_height="80dp"
            android:id="@+id/btn_0"
            android:onClick="onClick"
            android:layout_width="80dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:text="@string/btn_deng"
            android:textSize="25sp"
            android:layout_height="80dp"
            android:id="@+id/btn_deng"
            android:onClick="onClick"
            android:layout_width="160dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>
